--- a/client/src/pages/BlogList/bloglist.scss
+++ b/client/src/pages/BlogList/bloglist.scss
@@ -26,12 +26,12 @@
 .pagination {
     display: flex;
     justify-content: center;
-    margin-top: 20px;
+    margin-top: 2rem;
+    gap: 0.3rem;
 }
 
 .page-button {
-    margin: 0 5px;
-
+    margin: 0 px;
     transition: background-color 0.3s ease;
 }
 
