delete blog button added to edit blog page

--- a/client/src/pages/Admin/EditBlog/editblog.scss
+++ b/client/src/pages/Admin/EditBlog/editblog.scss
@@ -13,3 +13,9 @@ button.enabled {
 button.enabled:hover {
     background-color: #0056b3;
 }
+
+.create-blog {
+    @include dark {
+        background: rgb(126, 126, 126);
+    }
+}
